# prefapp-core

./: .dockerignore  .gitignore  Dockerfile  README.md  \  contributors.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pr_verify.yaml  release.yaml
core/: comando.py
dani/: proba.py
prefapp_core/: alijo.py  comando.py  init.py  log.py  procesador.py  sh_runner.py  tarea.py
prefapp_core/sys/: runner.py
prefapp_core/utiles/: cli.py  cli_args.py  confirmacion.py
test/: probaAz.py  test_cli.py  test_cli_args.py  test_comando.py  test_comando_alijo.py  test_comando_logs.py  test_init.py  test_procesador.py  test_sh_runner.py  test_sys_comando_runner.py
test/fixtures/: a.py  b.py
test/fixtures/cli/: cli.py
test/fixtures/cli/test/cmd_test/: a.py
test/fixtures/cmdberto/: power.py
test/fixtures/compleja/: a.py
test/fixtures/fam_a/: com_a1.py  com_a2.py
test/fixtures/familia/: az.py  proba.py  sumar.py
test/fixtures/outra/: a_mayusculas.py
