[tool.poetry]
name = "prefapp-core"
version = "0.1.0"
description = "Prefapp's core utility library."
authors = ["frmadem <frmadem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
JSON-log-formatter = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
